[package]
name = "cogs-gamedev"
version = "0.1.5"
authors = ["gamma-delta"]
edition = "2018"
description = "Common, Obnoxious Game Stuff. Contains a bunch of useful boilerplate for writing games."
repository = "https://github.com/gamma-delta/cogs"
license = "MIT"
keywords = ["gamedev", "boilerplate"]
categories = ["game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "0.6.4"